Add JVM argument to allow reflection access for Guice in RuneLiteCustomLauncher and patch hooks